--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "kafka-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  "repository": "https://github.com/shadowfightbeast/kafka-app.git",
+  "author": "Mithilesh Kumar Singh <shadowfightbeast@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "kafkajs": "^2.2.4"
+  }
 }
